Compute costs medical staff